# sports-prediction

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_COMPLETE.txt  Cargo.toml  DEPLOYMENT.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
config/: default.yaml
docker/: Dockerfile.python  Dockerfile.rust  docker-compose.yml  prometheus.yml
python/: requirements.txt
python/backtesting/: __init__.py  backtest_engine.py
python/sentiment/: __init__.py  sentiment_analyzer.py
sql/: schema.sql
src/: config.rs  main.rs  types.rs
src/execution/: blockchain.rs  engine.rs  mod.rs
src/models/: mod.rs
src/monitoring/: metrics.rs  mod.rs  service.rs
src/risk/: manager.rs  mod.rs  portfolio.rs
src/strategies/: clv_arbitrage.rs  mod.rs  poisson_ev.rs  signal_generator.rs
