[package]
name = "polymarket-trading-bot"
version = "2.0.0"
edition = "2021"
authors = ["Trading Bot Team"]
description = "Production-ready sports prediction trading bot for Polymarket"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Blockchain & Ethereum
ethers = { version = "2.0", features = ["ws", "rustls", "abigen"] }
ethers-providers = "2.0"
ethers-signers = "2.0"
ethers-contract = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# HTTP & WebSocket
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

# Data structures
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Configuration
config = "0.13"
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Math & Statistics
statrs = "0.16"
nalgebra = "0.32"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Utils
futures = "0.3"
async-trait = "0.1"
once_cell = "1.19"

[dev-dependencies]
mockito = "1.2"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[[bin]]
name = "trading-bot"
path = "src/main.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"
